# multimodal_rag_batch

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data/: parse_news.ipynb
src/embeddings/: embedder.py
src/index/: data_loader.py  index_documents.py
src/rag/: context.py  openai_chain.py  vector_store.py
src/utils/: config.py
