[project]
name = "multimodal-rag-batch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=0.3.18",
    "langchain>=0.3.25",
    "open-clip-torch>=2.32.0",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "langchain-chroma>=0.2.4",
    "chromadb>=1.0.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "protobuf>=3.20.0,<4.0.0", # avoid issues
    "langchain-huggingface>=0.2.0",
    "langchain-experimental>=0.3.4",
    "ragas>=0.2.15",
    "bs4>=0.0.2",
]
